<resources>
    <string name="app_name">BMI</string>
    <string name="activities_header">BMI Analyzer</string>

    <!--Splash activity-->
    <string name="splash_next">Next</string>

    <!--Login activity-->
    <string name="login_tv1">Welcome Back</string>
    <string name="login_tv2">If you already have an account, log in</string>
    <string name="login_et_username">Username</string>
    <string name="login_et_password">Password</string>
    <string name="login_btn_login">Log In</string>
    <string name="login_tv3">You Don\'t  have an account? </string>
    <string name="login_tv4_signUp">Sign Up</string>

    <!--Signup activity-->
    <string name="signup_tv1">Ctreate New Account</string>
    <string name="signup_tv2">If you don\'t already have an account</string>
    <string name="signup_et_name">Name</string>
    <string name="signup_et_email">E-Mail</string>
    <string name="signup_et_password">Password</string>
    <string name="signup_et_RePassword">Re-Password</string>
    <string name="signup_btn_create">Create</string>
    <string name="signup_tv3">You have an account?</string>
    <string name="signup_tv4_login">Login</string>

    <!--Complete Signup2 activity-->
    <string name="completeSignUp_tv1">Complete Your Information</string>
    <string name="completeSignUp_tv_gender">Gender</string>
    <string name="completeSignUp_rb_male">Male</string>
    <string name="completeSignUp_rb_female">Female</string>
    <string name="completeSignUp_tv_weight">Weight</string>
    <string name="completeSignUp_tv_length">Length</string>
    <string name="completeSignUp_tv_dob">Date Of Birth</string>
    <string name="completeSignUp_tv_kg">kg</string>
    <string name="completeSignUp_tv_cm">cm</string>
    <string name="completeSignUp_btn_save">Save Data</string>

    <!--Home activity-->
    <string name="home_tv2_status">Current Status</string>
    <string name="home_tv_status">Healthy Weight (Still Good)</string>
    <string name="home_et_oldStatus">Old Status</string>
    <string name="home_btn_addFood">Add Food</string>
    <string name="home_btn_addRecord">Add Record</string>
    <string name="home_btn_viewFood">View Food</string>
    <string name="home_tv3_logout">Logout</string>

    <!-- Add Record activity-->
    <string name="addRecord_tv1">New Record</string>
    <string name="addRecord_tv_weight">Weight</string>
    <string name="addRecord_tv_length">Length</string>
    <string name="addRecord_tv_kg">kg</string>
    <string name="addRecord_tv_cm">cm</string>
    <string name="addRecord_tv_date">Date</string>
    <string name="addRecord_tv_time">Time</string>
    <string name="addRecord_btn_save">Save Data</string>

    <!-- Add Food Details activity-->
    <string name="addFoodDetails_tv1">Add Food Details</string>
    <string name="addFoodDetails_tv_name">Name</string>
    <string name="addFoodDetails_tv_category">Category</string>
    <string name="addFoodDetails_tv_calory">Calory</string>
    <string name="addFoodDetails_tv_calUnit">Cal/g</string>
    <string name="addFoodDetails_tv_photo">Photo</string>
    <string name="addFoodDetails_btn_upload">Upload Photo</string>
    <string name="addFoodDetails_btn_save">Save</string>

    <!-- Edit Food Details activity-->
    <string name="EditFoodDetails_tv1">Add Food Details</string>
    <string name="EditFoodDetails_tv_name">Name</string>
    <string name="EditFoodDetails_tv_category">Category</string>
    <string name="EditFoodDetails_tv_calory">Calory</string>
    <string name="EditFoodDetails_tv_calUnit">Cal/g</string>
    <string name="EditFoodDetails_tv_photo">Photo</string>
    <string name="EditFoodDetails_btn_upload">Upload Photo</string>
    <string name="EditFoodDetails_btn_save">Save</string>

    <!-- Food List activity -->
    <string name="foodList_tv1">Food List</string>

    <!-- Food List Items Shape activity -->
    <string name="foodItems_btn_edit">Edit</string>

</resources>