<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activities_header"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@color/blue"
        android:padding="10dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/login_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tv1"
        android:textColor="@color/blue"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/login_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tv2"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:typeface="serif"/>

    <EditText
        android:id="@+id/login_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/login_et_username"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="10dp"/>


    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_et_password"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="10dp"
        android:drawableEnd="@drawable/visibilty"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_login"
        android:layout_marginTop="70dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:padding="10dp"
        android:backgroundTint="@color/blue"
        android:textSize="15dp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/login_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tv3"
            android:typeface="serif"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/login_tv4_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tv4_signUp"
            android:textColor="@color/blue"
            android:typeface="serif"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_et_password"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:backgroundTint="@color/white"/>


    </com.google.android.material.textfield.TextInputLayout>-->


</LinearLayout>