<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activities_header"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@color/blue"
        android:padding="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/home_tv1_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/home_tv2_currentStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_tv2_status"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/home_tv_status"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/blue_border_shape"
        android:gravity="center"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/home_et_oldStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_et_oldStatus"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginStart="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_rv_oldStatus"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:background="@color/blue"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/home_btn_addFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_btn_addFood"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:backgroundTint="@color/blue"
            android:layout_marginRight="5dp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <Button
            android:id="@+id/home_btn_addRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_btn_addRecord"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:backgroundTint="@color/blue"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:padding="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/home_btn_viewFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/home_btn_viewFood"
        android:textSize="20sp"
        android:padding="10dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/blue"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/home_tv3_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/home_tv3_logout"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="62dp"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="-5dp"/>


</LinearLayout>